--- a/gb/22/3/28/n13678637.md
+++ b/gb/22/3/28/n13678637.md
@@ -141,7 +141,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10283458.md#1" target="_blank">李庆霖“知青英雄”悲剧是如何造成的(上)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/14/n11587779.md#1" target="_blank">台北修炼心得交流会 法轮功学员谈身心改变</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/28/n10094168.md#1" target="_blank">如初：再回顾民国学人批苏俄</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/1/n10946163.md#1" target="_blank">新加坡法轮功学员修炼故事 真善忍改变人心</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
